--- a/projects/trant6/dominion/Makefile
+++ b/projects/trant6/dominion/Makefile
@@ -29,6 +29,45 @@ runtests: testDrawCard
 	gcov dominion.c >> unittestresult.out
 	cat dominion.c.gcov >> unittestresult.out
 
+unittest1: unittest1.c
+	echo "unittest1.c"
+	gcc -o unittest1 -g unittest1.c dominion.o rngs.o $(CFLAGS)
+
+unittest2: unittest2.c
+	echo "unittest2.c"
+	gcc -o unittest2 -g unittest2.c dominion.o rngs.o $(CFLAGS)
+
+unittest3: unittest3.c
+	echo "unittest3.c"
+	gcc -o unittest3 -g unittest3.c dominion.o rngs.o $(CFLAGS)
+
+unittest4: unittest4.c
+	echo "unittest4.c"
+	gcc -o unittest4 -g unittest4.c dominion.o rngs.o $(CFLAGS)
+
+unittest5: unittest5.c
+	echo "unittest5.c"
+	gcc -o unittest5 -g unittest5.c dominion.o rngs.o $(CFLAGS)
+
+cardtest1: cardtest1.c
+	echo "cardtest1.c"
+	gcc -o cardtest1 -g cardtest1.c dominion.o rngs.o $(CFLAGS)
+
+cardtest2: cardtest2.c
+	echo "cardtest2.c"
+	gcc -o cardtest2 -g cardtest2.c dominion.o rngs.o $(CFLAGS)
+
+cardtest3: cardtest3.c
+	echo "cardtest3.c"
+	gcc -o cardtest3 -g cardtest3.c dominion.o rngs.o $(CFLAGS)
+
+cardtest4: cardtest4.c
+	echo "cardtest4.c"
+	gcc -o cardtest4 -g cardtest4.c dominion.o rngs.o $(CFLAGS)
+
+cardtest5: cardtest5.c
+	echo "cardtest5.c"
+	gcc -o cardtest5 -g cardtest5.c dominion.o rngs.o $(CFLAGS)
 
 player: player.c interface.o
 	gcc -o player player.c -g  dominion.o rngs.o interface.o $(CFLAGS)
