issues adding files via cmd line; used github web

--- a/projects/trant6/dominion/Makefile
+++ b/projects/trant6/dominion/Makefile
@@ -119,5 +119,31 @@ player: player.c interface.o
 
 all: playdom player 
 
+
+randomtestcard1: randomtestcard1.c
+	gcc -o randomtestcard1 -g randomtestcard1.c dominion.o rngs.o $(CFLAGS)
+
+randomtestcard2: randomtestcard2.c 
+	gcc -o randomtestcard2 -g randomtestcard2.c dominion.o rngs.o $(CFLAGS)	
+
+randomtestcard3: randomtestcard3.c 
+	gcc -o randomtestcard3 -g randomtestcard3.c dominion.o rngs.o $(CFLAGS)	
+
+randomtestresults: randomtestcard1.c randomtestcard2.c randomtestcard3 
+	echo "Result for running random tests:" > randomtestresults.out
+
+	gcc -o randomtestcard1 -g  randomtestcard1.c dominion.o rngs.o $(CFLAGS)
+	echo "randomtestcard1.c:" >> randomtestresults.out
+	./randomtestcard1 >> randomtestresults.out
+
+	gcc -o randomtestcard2 -g  randomtestcard2.c dominion.o rngs.o $(CFLAGS)
+	echo "randomtestcard2.c:" >> randomtestresults.out
+	./randomtestcard2 >> randomtestresults.out
+
+	gcc -o randomtestcard3 -g  randomtestcard3.c dominion.o rngs.o $(CFLAGS)
+	echo "randomtestcard3.c:" >> randomtestresults.out
+	./randomtestcard3 >> randomtestresults.out
+
+
 clean:
 	rm -f *.o playdom.exe playdom player player.exe  *.gcov *.gcda *.gcno *.so *.out testDrawCard testDrawCard.exe
